Closed Bug 852761 Opened 12 years ago Closed 12 years ago

dis() doesn't work on arrow functions (or other bound functions)

Categories

(Core :: JavaScript Engine, defect)

Other Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22

People

(Reporter: jorendorff, Assigned: jorendorff)

References

Details

Attachments

(1 file)

<brendan> rs=me
Blocks: 846406
Attached patch v1Splinter Review
Assignee: general → jorendorff
Attachment #727016 - Flags: review?(luke)
Attachment #727016 - Flags: review?(luke) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: