Bug 852761 - dis() doesn't work on arrow functions. r=luke.